--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
     "semantic-release": "^15.0.0"
   },
   "dependencies": {
-    "isemail-es5": "^3.1.1"
+    "email-validator": "^1.1.1"
   }
 }
