build(rollup): build library using rollup.js
BREAKING CHANGE: Build library using rollup.js. Move email-validator dependency to peer.

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,24 @@
 {
-  "presets": [
-    "@babel/preset-env"
-  ],
-  "ignore": [
-    "node_modules/**",
-    "*.test.js"
-  ]
-}
+    "env": {
+      "test": {
+        "presets": [
+          [
+            "@babel/preset-env",
+            { "modules": "umd" }
+          ]
+        ]
+      },
+      "production": {
+        "presets": [
+          [
+            "@babel/preset-env",
+            { "modules": false }
+          ]
+        ]
+      }
+    },
+    "ignore": [
+      "node_modules/**",
+      "*.test.js"
+    ]
+  }
