--- a/package.json
+++ b/package.json
@@ -1,35 +1,54 @@
 {
   "name": "email-prop-type",
   "version": "0.0.0-development",
-  "description": "React Prop Types Email Validator",
-  "main": "./build/index.js",
+  "description": "React Email Prop Type",
+  "keywords": [
+    "react",
+    "email",
+    "email prop-type",
+    "email prop",
+    "email prop-types",
+    "email props"
+  ],
+  "files": [
+    "build"
+  ],
+  "browser": "build/index.js",
+  "main": "build/index.cjs.js",
+  "module": "build/index.esm.js",
   "scripts": {
+    "build": "BABEL_ENV=production rollup -c",
     "codecov": "codecov",
     "commitmsg": "commitlint -e $GIT_PARAMS",
-    "compile": "babel -d build/ src/ --delete-dir-on-start",
+    "deploy": "npm run travis-deploy-once 'npm run semantic-release'",
+    "gc": "commit",
     "lint": "eslint --ext .js .",
-    "test": "jest src/ --coverage --no-cache",
-    "prepublishOnly": "npm run compile",
-    "semantic-commit": "commit",
+    "prepare": "npm run build",
     "semantic-release": "semantic-release",
+    "test": "BABEL_ENV=test jest src/ --coverage --no-cache",
     "travis-deploy-once": "travis-deploy-once"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jaebradley/email-prop-type.git"
   },
-  "keywords": [
-    "react",
-    "prop-types"
-  ],
   "author": "jae.b.bradley@gmail.com",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jaebradley/email-prop-type/issues"
   },
   "homepage": "https://github.com/jaebradley/email-prop-type#readme",
+  "readme": "https://github.com/jaebradley/email-prop-type#readme",
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "<rootDir>/build/",
+      "<rootDir>/node_modules/"
+    ]
+  },
+  "dependencies": {},
+  "peerDependencies": {
+    "email-validator": "^2.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.47",
@@ -42,15 +61,21 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^22.0.3",
     "codecov": "^3.0.2",
+    "email-validator": "^2.0.0",
     "eslint": "^4.12.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "husky": "^0.14.3",
     "jest": "^22.0.3",
+    "rollup": "^0.58.2",
+    "rollup-plugin-babel": "^4.0.0-beta.4",
+    "rollup-plugin-babel-minify": "^4.0.0",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-filesize": "^1.5.0",
+    "rollup-plugin-local-resolve": "^1.0.7",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-uglify": "^3.0.0",
     "semantic-release": "^15.0.0",
     "travis-deploy-once": "^5.0.0"
-  },
-  "dependencies": {
-    "email-validator": "^2.0.0"
   }
 }
