--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
   "module": "build/index.esm.js",
   "scripts": {
     "build": "BABEL_ENV=production rollup -c",
-    "codecov": "codecov",
-    "commitmsg": "commitlint -e $GIT_PARAMS",
+    "codecov": "npx codecov",
+    "commitmsg": "npx commitlint -e $GIT_PARAMS",
     "deploy": "npm run travis-deploy-once 'npm run semantic-release'",
     "gc": "commit",
-    "lint": "eslint --ext .js .",
+    "is-build-es5": "npx es-check es5 './build/**/*.!(esm).js'",
+    "lint": "npx eslint --ext .js .",
     "prepare": "npm run build",
-    "semantic-release": "semantic-release",
-    "test": "BABEL_ENV=test jest src/ --coverage --no-cache",
-    "travis-deploy-once": "travis-deploy-once"
+    "semantic-release": "npx semantic-release",
+    "test": "BABEL_ENV=test npx jest src/ --coverage --no-cache",
+    "travis-deploy-once": "npx travis-deploy-once"
   },
   "repository": {
     "type": "git",
@@ -39,41 +40,35 @@
   },
   "homepage": "https://github.com/jaebradley/email-prop-type#readme",
   "readme": "https://github.com/jaebradley/email-prop-type#readme",
-  "jest": {
-    "testEnvironment": "node",
-    "testPathIgnorePatterns": [
-      "<rootDir>/build/",
-      "<rootDir>/node_modules/"
-    ]
-  },
   "dependencies": {
     "email-validator": "^2.0.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.47",
-    "@babel/core": "^7.0.0-beta.47",
-    "@babel/preset-env": "^7.0.0-beta.47",
-    "@commitlint/cli": "^7.0.0",
-    "@commitlint/config-angular": "^7.0.1",
-    "@commitlint/prompt": "^7.0.0",
-    "@commitlint/prompt-cli": "^7.0.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-angular": "^8.3.4",
+    "@commitlint/prompt": "^8.3.5",
+    "@commitlint/prompt-cli": "^8.3.5",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.0.0",
-    "codecov": "^3.0.2",
-    "eslint": "^5.0.0",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "husky": "^0.14.3",
-    "jest": "^22.0.3",
-    "rollup": "^0.66.0",
-    "rollup-plugin-babel": "^4.0.0-beta.4",
-    "rollup-plugin-babel-minify": "^5.0.0",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-filesize": "^4.0.0",
+    "babel-jest": "^25.1.0",
+    "codecov": "^3.6.4",
+    "es-check": "^5.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "husky": "^4.2.1",
+    "jest": "^25.1.0",
+    "rollup": "^1.31.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-babel-minify": "^9.1.1",
+    "rollup-plugin-filesize": "^6.2.1",
     "rollup-plugin-local-resolve": "^1.0.7",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-terser": "^2.0.0",
-    "semantic-release": "^15.0.0",
-    "travis-deploy-once": "^5.0.0"
+    "rollup-plugin-terser": "^5.2.0",
+    "semantic-release": "^17.0.2",
+    "travis-deploy-once": "^5.0.11"
   }
 }
