--- a/package.json
+++ b/package.json
@@ -19,15 +19,14 @@
   "scripts": {
     "build": "BABEL_ENV=production rollup -c",
     "codecov": "npx codecov",
-    "commitmsg": "npx commitlint -e $GIT_PARAMS",
-    "deploy": "npm run travis-deploy-once 'npm run semantic-release'",
+    "commitmsg": "npx commitlint -E HUSKY_GIT_PARAMS",
+    "deploy": "npm run semantic-release",
     "gc": "commit",
     "is-build-es5": "npx es-check es5 './build/**/*.!(esm).js'",
     "lint": "npx eslint --ext .js .",
     "prepare": "npm run build",
     "semantic-release": "npx semantic-release",
-    "test": "BABEL_ENV=test npx jest src/ --coverage --no-cache",
-    "travis-deploy-once": "npx travis-deploy-once"
+    "test": "BABEL_ENV=test npx jest src/ --coverage --no-cache"
   },
   "repository": {
     "type": "git",
@@ -44,30 +43,29 @@
     "email-validator": "^2.0.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.1",
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "@commitlint/cli": "^9.0.1",
-    "@commitlint/config-angular": "^9.0.1",
-    "@commitlint/prompt": "^9.0.1",
-    "@commitlint/prompt-cli": "^9.0.1",
-    "@rollup/plugin-babel": "^5.0.3",
-    "@rollup/plugin-commonjs": "^13.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.1",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-angular": "^9.1.1",
+    "@commitlint/prompt": "^9.1.1",
+    "@commitlint/prompt-cli": "^9.1.1",
+    "@rollup/plugin-babel": "^5.2.0",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^26.0.1",
-    "codecov": "^3.7.0",
+    "babel-jest": "^26.3.0",
+    "codecov": "^3.7.2",
     "es-check": "^5.1.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-import": "^2.22.0",
     "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "rollup": "^2.15.0",
-    "rollup-plugin-filesize": "^9.0.0",
+    "jest": "^26.4.0",
+    "rollup": "^2.25.0",
+    "rollup-plugin-filesize": "^9.0.2",
     "rollup-plugin-local-resolve": "^1.0.7",
-    "rollup-plugin-terser": "^6.1.0",
-    "semantic-release": "^17.0.8",
-    "travis-deploy-once": "^5.0.11"
+    "rollup-plugin-terser": "^7.0.0",
+    "semantic-release": "^17.1.1"
   }
 }
